# ok-py-logging-setup

./: CLAUDE.md  README.md  mise.toml  ok_logging_setup.py  pg_logging.py  pyproject.toml  test_ok_logging_setup.py  try_ok_logging_setup.py
ok_logging_setup/: __init__.py  _filter.py  _formatter.py  _install.py
