[project]
authors = [{ name = "Dan Egnor", email="egnor@ofb.net" }]
description = "Simple minimalist Python logging defaults"
name = "ok-logging-setup"
readme = "README.md"
requires-python = ">=3.9"
urls.Homepage = "https://github.com/egnor/ok-py-logging-setup#readme"
urls.Repository = "https://github.com/egnor/ok-py-logging-setup.git"
version = "0.10"

[dependency-groups]
dev = ["mypy", "pytest", "ruff", "time-machine"]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
exclude_gitignore = true
files = "."

[tool.uv.build-backend]
module-name = "ok_logging_setup"
module-root = ""
